# rc-project

./: .coderabbit.yaml  .commitlintrc.yaml  .editorconfig  .gitignore  .golangci.yml  .goreleaser.oss.yml  .goreleaser.release-footer.md.tmpl  .goreleaser.release-header.md.tmpl  .goreleaser.yml  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE_BODY.md  RELEASE_NOTES.md  cliff.toml  go.mod  go.sum  package.json  rc.go  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  RELEASE_DRYRUN_CHECK.md  versions.yml
.rc/: LESSONS.md  ROADMAP.md  lessons.json
agents/: README.md  architect-advisor.md  devils-advocate.md  embed.go  pragmatic-engineer.md  product-mind.md  rc-exec-bulk.md  rc-exec.md  rc-explorer.md  rc-fix.md  rc-fixer.md  rc-gan.md  rc-git.md  rc-librarian.md  rc-oracle.md  rc-prd.md  rc-review.md  rc-tasks.md  rc-techspec.md  rc.md  security-advocate.md  the-thinker.md
aur-pkg/: PKGBUILD  PKGBUILD-src  README.md  TODO.md
commands/: embed.go  rc-card.md  rc-commit-msg.md  rc-docs.md  rc-exec.md  rc-gan.md  rc-git.md  rc-loop.md  rc-pipe.md  rc-plan.md  rc-plano.md  rc-review.md
docs/: claude-code-plugin.md  events.md  loop-engineering.md  reader-library.md  reusable-agents.md  toolkit-map.html  usage-map.html  (+1 more)
docs/boilerplate-axum-sveltekit-vps/backend/: Cargo.toml
docs/boilerplate-axum-sveltekit-vps/backend/src/: db.rs  main.rs  routes.rs
(+1476 files in other folders)
